--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18
+FROM node:alpine
 
 WORKDIR /app
 
@@ -11,3 +11,4 @@ COPY . .
 EXPOSE 5173
 
 CMD ["npm", "run", "dev", "--", "--host"]
+
